Fixed color contrast

--- a/src/components/projects/styles.module.scss
+++ b/src/components/projects/styles.module.scss
@@ -13,7 +13,7 @@
 
     h2 {
         font-size: 48px;
-        color: $light-grey;
+        color: $grey;
         text-align: center;
         margin-top: 60px;
     }
